// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Veiwing 
    1
     
    expense
     totalling 
    ₦2.40
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Veiwing 
    13
     
    expenses
     totalling 
    ₦89.00
  </h1>
</div>
`;
